--- a/_config.yml
+++ b/_config.yml
@@ -65,7 +65,7 @@ reCaptcha:
   secret:
 atom_feed:
   path: # blank (default) uses feed.xml
-search: # true, false (default)
+search: true # true, false (default)
 search_full_content: # true, false (default)
 search_provider: # lunr (default), algolia, google
 algolia:
@@ -107,10 +107,10 @@ analytics:
 # Site Author
 author:
   name: "JaeHyeonKim"
-  avatar: # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar: "/assets/images/KakaoTalk_Photo_2019-10-31-16-09-20.jpeg"
   bio: "Study hard"
   location: "Seoul, Korea"
-  email:
+  email: jaehyeonkim19@gamil.com
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
@@ -126,7 +126,7 @@ author:
       # url: "https://facebook.com/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      # url: "https://github.com/"
+      url: "https://github.com/JaeHyeonKim19"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       # url: "https://instagram.com/"
@@ -142,7 +142,7 @@ footer:
       # url:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      # url:
+      url: "https://github.com/JaeHyeonKim19"
     - label: "GitLab"
       icon: "fab fa-fw fa-gitlab"
       # url:
