[Config] 블로그 상태메세지 수정
블로그의 상태메세지를 이메일로 수정

--- a/_config.yml
+++ b/_config.yml
@@ -108,7 +108,7 @@ analytics:
 author:
   name: "JaeHyeonKim"
   avatar: "/assets/images/KakaoTalk_Photo_2019-10-31-16-09-20.jpeg"
-  bio: "Study hard"
+  bio: "jaehyeonkim19@gamil.com"
   location: "Seoul, Korea"
   email: jaehyeonkim19@gamil.com
   links:
